--- a/Air_Hockey.ioc
+++ b/Air_Hockey.ioc
@@ -1,4 +1,10 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.master=1
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL
@@ -8,48 +14,54 @@ IWDG.Prescaler=IWDG_PRESCALER_32
 IWDG.Reload=500
 KeepUserPlacement=false
 Mcu.Family=STM32F4
-Mcu.IP0=FREERTOS
-Mcu.IP1=IWDG
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=TIM1
-Mcu.IP6=TIM2
-Mcu.IP7=TIM3
-Mcu.IP8=USART3
-Mcu.IPNb=9
+Mcu.IP0=ADC1
+Mcu.IP1=FREERTOS
+Mcu.IP2=IWDG
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SYS
+Mcu.IP6=TIM1
+Mcu.IP7=TIM2
+Mcu.IP8=TIM3
+Mcu.IP9=USART3
+Mcu.IPNb=10
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14/OSC32_IN
-Mcu.Pin10=PE11
-Mcu.Pin11=PE13
-Mcu.Pin12=PE14
-Mcu.Pin13=PB14
-Mcu.Pin14=PD8
-Mcu.Pin15=PD9
-Mcu.Pin16=PG2
-Mcu.Pin17=PG3
-Mcu.Pin18=PC8
-Mcu.Pin19=PC9
+Mcu.Pin10=PA5
+Mcu.Pin11=PE9
+Mcu.Pin12=PE11
+Mcu.Pin13=PE13
+Mcu.Pin14=PE14
+Mcu.Pin15=PB10
+Mcu.Pin16=PB11
+Mcu.Pin17=PB14
+Mcu.Pin18=PD8
+Mcu.Pin19=PD9
 Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PC10
-Mcu.Pin21=PC11
-Mcu.Pin22=PC12
-Mcu.Pin23=PD2
-Mcu.Pin24=PB7
-Mcu.Pin25=VP_FREERTOS_VS_ENABLE
-Mcu.Pin26=VP_IWDG_VS_IWDG
-Mcu.Pin27=VP_SYS_VS_tim7
-Mcu.Pin28=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin20=PG2
+Mcu.Pin21=PG3
+Mcu.Pin22=PC8
+Mcu.Pin23=PC9
+Mcu.Pin24=PC10
+Mcu.Pin25=PC11
+Mcu.Pin26=PC12
+Mcu.Pin27=PD2
+Mcu.Pin28=PB3
+Mcu.Pin29=PB7
 Mcu.Pin3=PH0/OSC_IN
+Mcu.Pin30=VP_FREERTOS_VS_ENABLE
+Mcu.Pin31=VP_IWDG_VS_IWDG
+Mcu.Pin32=VP_SYS_VS_tim7
+Mcu.Pin33=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PA0/WKUP
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA3
-Mcu.Pin9=PE9
-Mcu.PinsNb=29
+Mcu.Pin9=PA4
+Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -70,22 +82,27 @@ NVIC.TimeBase=TIM7_IRQn
 NVIC.TimeBaseIP=TIM7
 NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA0/WKUP.GPIOParameters=GPIO_Speed
-PA0/WKUP.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PA0/WKUP.Signal=S_TIM2_CH1_ETR
-PA1.GPIOParameters=GPIO_Speed
-PA1.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PA1.Signal=S_TIM2_CH2
-PA2.GPIOParameters=GPIO_Speed
-PA2.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PA2.Signal=S_TIM2_CH3
-PA3.GPIOParameters=GPIO_Speed
-PA3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
-PA3.Signal=S_TIM2_CH4
+PA0/WKUP.Signal=ADCx_IN0
+PA1.Signal=ADCx_IN1
+PA2.Signal=ADCx_IN2
+PA3.Signal=ADCx_IN3
+PA4.Signal=ADCx_IN4
+PA5.GPIOParameters=GPIO_Speed
+PA5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA5.Signal=S_TIM2_CH1_ETR
+PB10.GPIOParameters=GPIO_Speed
+PB10.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB10.Signal=S_TIM2_CH3
+PB11.GPIOParameters=GPIO_Speed
+PB11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB11.Signal=S_TIM2_CH4
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=Red LED
 PB14.Locked=true
 PB14.Signal=GPIO_Output
+PB3.GPIOParameters=GPIO_Speed
+PB3.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB3.Signal=S_TIM2_CH2
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=Blue LED
 PB7.Locked=true
@@ -170,7 +187,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_IWDG_Init-IWDG-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_IWDG_Init-IWDG-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true
 RCC.48MHZClocksFreq_Value=90000000
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -209,6 +226,16 @@ RCC.VCOSAIOutputFreq_ValueQ=24500000
 RCC.VCOSAIOutputFreq_ValueR=49000000
 RCC.VcooutputI2S=192000000
 RCC.VcooutputI2SQ=192000000
+SH.ADCx_IN0.0=ADC1_IN0,IN0
+SH.ADCx_IN0.ConfNb=1
+SH.ADCx_IN1.0=ADC1_IN1,IN1
+SH.ADCx_IN1.ConfNb=1
+SH.ADCx_IN2.0=ADC1_IN2,IN2
+SH.ADCx_IN2.ConfNb=1
+SH.ADCx_IN3.0=ADC1_IN3,IN3
+SH.ADCx_IN3.ConfNb=1
+SH.ADCx_IN4.0=ADC1_IN4,IN4
+SH.ADCx_IN4.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
