--- a/Air_Hockey.ioc
+++ b/Air_Hockey.ioc
@@ -1,22 +1,37 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master
+ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV2
+ADC1.ContinuousConvMode=DISABLE
+ADC1.DMAContinuousRequests=DISABLE
+ADC1.DataAlign=ADC_DATAALIGN_RIGHT
+ADC1.DiscontinuousConvMode=DISABLE
+ADC1.EOCSelection=ADC_EOC_SINGLE_CONV
+ADC1.EnableAnalogWatchDog=false
+ADC1.ExternalTrigConv=ADC_SOFTWARE_START
+ADC1.ExternalTrigConvEdge=ADC_EXTERNALTRIGCONVEDGE_NONE
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,master,ClockPrescaler,Resolution,DataAlign,ScanConvMode,ContinuousConvMode,DiscontinuousConvMode,DMAContinuousRequests,EOCSelection,NbrOfConversion,ExternalTrigConv,ExternalTrigConvEdge,InjNumberOfConversion,EnableAnalogWatchDog
+ADC1.InjNumberOfConversion=0
+ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.Resolution=ADC_RESOLUTION_12B
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.ScanConvMode=DISABLE
 ADC1.master=1
+ADC2.Channel-12\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC2.IPParameters=Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion,NbrOfConversionFlag
+ADC2.NbrOfConversionFlag=1
+ADC2.Rank-12\#ChannelRegularConversion=1
+ADC2.SamplingTime-12\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
 FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL
 File.Version=6
-IWDG.IPParameters=Reload,Prescaler
-IWDG.Prescaler=IWDG_PRESCALER_32
-IWDG.Reload=500
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
-Mcu.IP1=FREERTOS
-Mcu.IP2=IWDG
+Mcu.IP1=ADC2
+Mcu.IP2=FREERTOS
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
@@ -29,39 +44,35 @@ Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14/OSC32_IN
-Mcu.Pin10=PA5
-Mcu.Pin11=PE9
-Mcu.Pin12=PE11
-Mcu.Pin13=PE13
-Mcu.Pin14=PE14
-Mcu.Pin15=PB10
-Mcu.Pin16=PB11
-Mcu.Pin17=PB14
-Mcu.Pin18=PD8
-Mcu.Pin19=PD9
+Mcu.Pin10=PE13
+Mcu.Pin11=PE14
+Mcu.Pin12=PB10
+Mcu.Pin13=PB11
+Mcu.Pin14=PB14
+Mcu.Pin15=PD8
+Mcu.Pin16=PD9
+Mcu.Pin17=PG2
+Mcu.Pin18=PG3
+Mcu.Pin19=PC8
 Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PG2
-Mcu.Pin21=PG3
-Mcu.Pin22=PC8
-Mcu.Pin23=PC9
-Mcu.Pin24=PC10
-Mcu.Pin25=PC11
-Mcu.Pin26=PC12
-Mcu.Pin27=PD2
-Mcu.Pin28=PB3
-Mcu.Pin29=PB7
+Mcu.Pin20=PC9
+Mcu.Pin21=PC10
+Mcu.Pin22=PC11
+Mcu.Pin23=PC12
+Mcu.Pin24=PD2
+Mcu.Pin25=PB3
+Mcu.Pin26=PB7
+Mcu.Pin27=VP_FREERTOS_VS_ENABLE
+Mcu.Pin28=VP_SYS_VS_tim7
+Mcu.Pin29=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PH0/OSC_IN
-Mcu.Pin30=VP_FREERTOS_VS_ENABLE
-Mcu.Pin31=VP_IWDG_VS_IWDG
-Mcu.Pin32=VP_SYS_VS_tim7
-Mcu.Pin33=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PA0/WKUP
 Mcu.Pin6=PA1
-Mcu.Pin7=PA2
-Mcu.Pin8=PA3
-Mcu.Pin9=PA4
-Mcu.PinsNb=34
+Mcu.Pin7=PA5
+Mcu.Pin8=PE9
+Mcu.Pin9=PE11
+Mcu.PinsNb=30
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -84,9 +95,6 @@ NVIC.USART3_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0/WKUP.Signal=ADCx_IN0
 PA1.Signal=ADCx_IN1
-PA2.Signal=ADCx_IN2
-PA3.Signal=ADCx_IN3
-PA4.Signal=ADCx_IN4
 PA5.GPIOParameters=GPIO_Speed
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA5.Signal=S_TIM2_CH1_ETR
@@ -187,7 +195,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_IWDG_Init-IWDG-false-HAL-true,4-MX_TIM1_Init-TIM1-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_TIM2_Init-TIM2-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_ADC1_Init-ADC1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_TIM1_Init-TIM1-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_ADC2_Init-ADC2-false-HAL-true
 RCC.48MHZClocksFreq_Value=90000000
 RCC.AHBFreq_Value=180000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -228,14 +236,8 @@ RCC.VcooutputI2S=192000000
 RCC.VcooutputI2SQ=192000000
 SH.ADCx_IN0.0=ADC1_IN0,IN0
 SH.ADCx_IN0.ConfNb=1
-SH.ADCx_IN1.0=ADC1_IN1,IN1
+SH.ADCx_IN1.0=ADC2_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
-SH.ADCx_IN2.0=ADC1_IN2,IN2
-SH.ADCx_IN2.ConfNb=1
-SH.ADCx_IN3.0=ADC1_IN3,IN3
-SH.ADCx_IN3.ConfNb=1
-SH.ADCx_IN4.0=ADC1_IN4,IN4
-SH.ADCx_IN4.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
@@ -280,8 +282,6 @@ USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 VP_FREERTOS_VS_ENABLE.Mode=Enabled
 VP_FREERTOS_VS_ENABLE.Signal=FREERTOS_VS_ENABLE
-VP_IWDG_VS_IWDG.Mode=IWDG_Activate
-VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_tim7.Mode=TIM7
 VP_SYS_VS_tim7.Signal=SYS_VS_tim7
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
