cubeMX파일올리기

--- a/Air_Hockey.ioc
+++ b/Air_Hockey.ioc
@@ -25,7 +25,7 @@ ADC2.Rank-12\#ChannelRegularConversion=1
 ADC2.SamplingTime-12\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL
+FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;Controller,0,128,Controller_Thread,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
