--- a/Air_Hockey.ioc
+++ b/Air_Hockey.ioc
@@ -205,9 +205,19 @@ SH.ADCx_IN3.0=ADC2_IN3,IN3
 SH.ADCx_IN3.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-TIM1.IPParameters=Prescaler,Period
-TIM1.Period=450
-TIM1.Prescaler=1000
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period,OCFastMode_PWM-PWM Generation2 CH2,OCFastMode_PWM-PWM Generation1 CH1,OCFastMode_PWM-PWM Generation3 CH3,OCFastMode_PWM-PWM Generation4 CH4,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2
+TIM1.OCFastMode_PWM-PWM\ Generation1\ CH1=TIM_OCFAST_ENABLE
+TIM1.OCFastMode_PWM-PWM\ Generation2\ CH2=TIM_OCFAST_ENABLE
+TIM1.OCFastMode_PWM-PWM\ Generation3\ CH3=TIM_OCFAST_ENABLE
+TIM1.OCFastMode_PWM-PWM\ Generation4\ CH4=TIM_OCFAST_ENABLE
+TIM1.Period=90
+TIM1.Prescaler=500
+TIM1.Pulse-PWM\ Generation1\ CH1=0
+TIM1.Pulse-PWM\ Generation2\ CH2=0
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 VP_SYS_VS_tim7.Mode=TIM7
