--- a/Air_Hockey.ioc
+++ b/Air_Hockey.ioc
@@ -39,27 +39,29 @@ Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14/OSC32_IN
-Mcu.Pin10=PG2
-Mcu.Pin11=PG3
-Mcu.Pin12=PC8
-Mcu.Pin13=PC9
-Mcu.Pin14=PC10
-Mcu.Pin15=PC11
-Mcu.Pin16=PC12
-Mcu.Pin17=PD2
-Mcu.Pin18=PB7
-Mcu.Pin19=VP_SYS_VS_tim7
+Mcu.Pin10=PD8
+Mcu.Pin11=PD9
+Mcu.Pin12=PG2
+Mcu.Pin13=PG3
+Mcu.Pin14=PC8
+Mcu.Pin15=PC9
+Mcu.Pin16=PC10
+Mcu.Pin17=PC11
+Mcu.Pin18=PC12
+Mcu.Pin19=PD2
 Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin21=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin20=PB7
+Mcu.Pin21=VP_SYS_VS_tim7
+Mcu.Pin22=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin23=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PH0/OSC_IN
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PA0/WKUP
 Mcu.Pin6=PA3
-Mcu.Pin7=PB14
-Mcu.Pin8=PD8
-Mcu.Pin9=PD9
-Mcu.PinsNb=22
+Mcu.Pin7=PE9
+Mcu.Pin8=PE11
+Mcu.Pin9=PB14
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -126,6 +128,14 @@ PD8.Signal=USART3_TX
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
+PE11.GPIOParameters=GPIO_Label
+PE11.GPIO_Label=right_step
+PE11.Locked=true
+PE11.Signal=GPIO_Output
+PE9.GPIOParameters=GPIO_Label
+PE9.GPIO_Label=left_step
+PE9.Locked=true
+PE9.Signal=GPIO_Output
 PG2.Locked=true
 PG2.Signal=GPIO_Output
 PG3.Locked=true
@@ -205,19 +215,9 @@ SH.ADCx_IN3.0=ADC2_IN3,IN3
 SH.ADCx_IN3.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM1.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
-TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM1.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Prescaler,Period,OCFastMode_PWM-PWM Generation2 CH2,OCFastMode_PWM-PWM Generation1 CH1,OCFastMode_PWM-PWM Generation3 CH3,OCFastMode_PWM-PWM Generation4 CH4,Pulse-PWM Generation1 CH1,Pulse-PWM Generation2 CH2
-TIM1.OCFastMode_PWM-PWM\ Generation1\ CH1=TIM_OCFAST_ENABLE
-TIM1.OCFastMode_PWM-PWM\ Generation2\ CH2=TIM_OCFAST_ENABLE
-TIM1.OCFastMode_PWM-PWM\ Generation3\ CH3=TIM_OCFAST_ENABLE
-TIM1.OCFastMode_PWM-PWM\ Generation4\ CH4=TIM_OCFAST_ENABLE
+TIM1.IPParameters=Prescaler,Period
 TIM1.Period=90
 TIM1.Prescaler=500
-TIM1.Pulse-PWM\ Generation1\ CH1=0
-TIM1.Pulse-PWM\ Generation2\ CH2=0
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
 VP_SYS_VS_tim7.Mode=TIM7
