--- a/Air_Hockey.ioc
+++ b/Air_Hockey.ioc
@@ -45,15 +45,17 @@ Mcu.Pin12=PG2
 Mcu.Pin13=PG3
 Mcu.Pin14=PC8
 Mcu.Pin15=PC9
-Mcu.Pin16=PC10
-Mcu.Pin17=PC11
-Mcu.Pin18=PC12
-Mcu.Pin19=PD2
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14
+Mcu.Pin18=PC10
+Mcu.Pin19=PC11
 Mcu.Pin2=PC15/OSC32_OUT
-Mcu.Pin20=PB7
-Mcu.Pin21=VP_SYS_VS_tim7
-Mcu.Pin22=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin23=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin20=PC12
+Mcu.Pin21=PD2
+Mcu.Pin22=PB7
+Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin24=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin25=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PH0/OSC_IN
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PA0/WKUP
@@ -61,7 +63,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PE9
 Mcu.Pin8=PE11
 Mcu.Pin9=PB14
-Mcu.PinsNb=24
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -78,12 +80,13 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:true
-NVIC.TIM7_IRQn=true\:0\:0\:false\:false\:true\:false
-NVIC.TimeBase=TIM7_IRQn
-NVIC.TimeBaseIP=TIM7
 NVIC.USART3_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false
 PA0/WKUP.Signal=ADCx_IN0
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_JTCK-SWCLK
 PA3.Locked=true
 PA3.Signal=ADCx_IN3
 PB14.GPIOParameters=GPIO_Label
@@ -216,12 +219,12 @@ SH.ADCx_IN3.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
 TIM1.IPParameters=Prescaler,Period
-TIM1.Period=90
+TIM1.Period=80
 TIM1.Prescaler=500
 USART3.IPParameters=VirtualMode
 USART3.VirtualMode=VM_ASYNC
-VP_SYS_VS_tim7.Mode=TIM7
-VP_SYS_VS_tim7.Signal=SYS_VS_tim7
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
